Fixed tabs and whitespaces

--- a/style.css
+++ b/style.css
@@ -485,7 +485,7 @@
 
   @keyframes typing {
     from {
-      width: 0
+      width: 0;
     }
   }
       
@@ -570,5 +570,4 @@
     #contacts > h3 {
       font-size: 2.5vw;
     }
-
   }
